discussion/kv_engine/162392/162392_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-45066: Remove support for "default bucket"

All connections needs to authenticate to the server and
select a bucket (unless a bucket exists with the same
name as the authenticated user)

Change-Id: I9b441208139e4bfbcdfee80fdd6c672f6f08e4c3

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-09-29 07:37:55.000000000
Message: 
Uploaded patch set 10.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-29 08:01:57.000000000
Message: 
Patch Set 10: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12947/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:10:10: error: "memcached_audit_events.h" file not found [clang-diagnostic-error]
#include "memcached_audit_events.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12947/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:10:10:
error: "memcached_audit_events.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12947/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34491/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40537/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11734/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14554/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22832/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14818/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2575/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15370/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13700/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2609/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-09-29 08:16:48.000000000
Message: 
Patch Set 10: Verified+1

Override failing clang-tidy job.. Not related to the change
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-09-29 08:16:51.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2021-09-29 09:24:14.000000000
Message: 
Patch Set 10: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
